# CausalPilot

./: .flake8  .gitattributes  .gitignore  404.html  CONTRIBUTING.md  FUTURE_DEVELOPMENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: SECURITY.md  codeql.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
api_documentation/: index.html
causal_inference_intro/: index.html
causalpilot/: __init__.py
causalpilot/core/: __init__.py  base_estimator.py  causal_graph.py  causal_model.py  llm_integration.py  refutation.py
causalpilot/datasets/: __init__.py  ihdp.py  lalonde.py  twins.py
causalpilot/inference/: __init__.py  causal_forest.py  comparison.py  doubleml.py  iv.py  s_learner.py  t_learner.py  x_learner.py
causalpilot/scripts/: compare_estimators.py  run_estimator.py  visualize_results.py
causalpilot/utils/: __init__.py  testing.py  validation.py
causalpilot/visualization/: __init__.py  diagnostics.py  graph_plotting.py
docs/: api_documentation.md  causal_inference_intro.md  estimator_theory.md  index.md
estimator_theory/: index.html
notebooks/: 01_causalpilot_tutorial.ipynb  02_causalpilot_advanced.ipynb
search/: search_index.json
tests/: test_causal_model.py  test_diagnostics.py  test_estimators.py  test_iv.py  test_refutation.py  test_x_learner.py
