[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "causalpilot"
version = "1.0.0"
description = "A comprehensive framework for causal inference testing with multiple estimators"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Christian Abele", email = "christian.abele@uni-bielefeld.de"},
]
maintainers = [
    {name = "Christian Abele", email = "christian.abele@uni-bielefeld.de"},
]
keywords = ["causal inference", "machine learning", "statistics", "treatment effects"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "joblib>=1.1.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
notebooks = [
    "jupyter",
    "ipykernel", 
    "plotly>=5.0.0",
]
advanced = [
    "xgboost>=1.5.0",
    "lightgbm>=3.3.0",
    "shap>=0.40.0",
]
all = [
    "causalpilot[dev,notebooks,advanced]"
]

[project.urls]
Homepage = "https://github.com/causalpilot/causalpilot"
Documentation = "https://causalpilot.readthedocs.io/"
Repository = "https://github.com/causalpilot/causalpilot.git"
"Bug Tracker" = "https://github.com/causalpilot/causalpilot/issues"

[project.scripts]
causalpilot-run = "causalpilot.scripts.run_estimator:main"
causalpilot-compare = "causalpilot.scripts.compare_estimators:main"

[tool.setuptools]
packages = ["causalpilot"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=causalpilot --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true